--- a/src/main/resources/templates/listReminders.html
+++ b/src/main/resources/templates/listReminders.html
@@ -9,7 +9,7 @@
 
 <h2>List of reminders</h2>
 <form method="get" action="/">
-    <input type="text" name="filter" value="${filter?ifExists}" placeholder="Search by text"/>
+    <input type="text" name="filter" placeholder="Search by text"/>
     <button type="submit">Search</button>
 </form>
 <table border="1">
